--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,12 @@
 			<version>1.10.4</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.mulesoft.connectors</groupId>
 			<artifactId>mule-amazon-rds-connector</artifactId>
 			<version>1.3.4</version>
 			<classifier>mule-plugin</classifier>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -129,12 +129,12 @@
 			<version>1.2.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>9a117cbd-4aa5-4395-86a0-db9ccb1f730b</groupId>
 			<artifactId>mule-plugin-g13_orders_api</artifactId>
 			<version>1.0.3</version>
 			<classifier>mule-plugin</classifier>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-email-connector</artifactId>
